force-app/main/default/objects/Insurer__c/Insurer__c.object-meta.xml
<CustomObject>
    <description>Capture related Insurer details of quote/policy</description>
    <label>Insurer</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Insurer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>