force-app/main/default/objects/Insurer__c/fields/Insurer_Commission__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Commission__c</fullName>
    <formula>Opportunity_Premium__c *  Insurer_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurer Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>