force-app/main/default/objects/Insurer__c/fields/MGA_Commission__c.field-meta.xml
<CustomField>
    <fullName>MGA_Commission__c</fullName>
    <description>Commission percentage the company gives</description>
    <label>MGA Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>