force-app/main/default/objects/Insurer__c/fields/MGA_Commission_Amount2__c.field-meta.xml
<CustomField>
    <fullName>MGA_Commission_Amount2__c</fullName>
    <label>MGA Commission Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>