force-app/main/default/objects/Insurer__c/fields/MGA_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>MGA_Commission_Amount__c</fullName>
    <formula>MGA_Commission__c  *  Insurer_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MGA Commission Amount(F)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>