force-app/main/default/objects/Insurer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity lookup</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insurers</relationshipLabel>
    <relationshipName>Insurers</relationshipName>
    <type>Lookup</type>
</CustomField>