force-app/main/default/objects/Insurer__c/fields/Opportunity_Premium__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Premium__c</fullName>
    <formula>Opportunity__r.Premium_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>