force-app/main/default/objects/Insurer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insurer-Product lookup</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Insurers</relationshipLabel>
    <relationshipName>Insurers</relationshipName>
    <type>Lookup</type>
</CustomField>