force-app/main/default/objects/Insurer__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipLabel>Insurers</relationshipLabel>
    <relationshipName>Insurers</relationshipName>
    <type>Lookup</type>
</CustomField>