force-app/main/default/objects/Insurer__c/fields/Quote_Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Insurer_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Insurer Name</label>
    <type>Text</type>
</CustomField>