force-app/main/default/objects/Insurer__c/fields/Validity_Check_For_Opp__c.field-meta.xml
<CustomField>
    <fullName>Validity_Check_For_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true will not allow the user o create a new insurer</description>
    <label>Validity Check For Opp</label>
    <type>Checkbox</type>
</CustomField>