force-app/main/default/objects/Insurer__c/recordTypes/Insurer_Of_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Insurer_Of_Opportunity</fullName>
    <active>true</active>
    <description>Capture related insurer details involved in opportunity</description>
    <label>Insurer Of Opportunity</label>
</RecordType>