force-app/main/default/objects/Insurer__c/recordTypes/Insurer_of_Policy.recordType-meta.xml
<RecordType>
    <fullName>Insurer_of_Policy</fullName>
    <active>true</active>
    <description>Capture related insurer details involved in policy</description>
    <label>Insurer of Policy</label>
</RecordType>