force-app/main/default/objects/Insurer__c/recordTypes/Insurer_Of_Product.recordType-meta.xml
<RecordType>
    <fullName>Insurer_Of_Product</fullName>
    <active>true</active>
    <description>Capture related insurer details involved in product</description>
    <label>Insurer Of Product</label>
</RecordType>