force-app/main/default/objects/Insurer__c/recordTypes/Insurer_of_Quote.recordType-meta.xml
<RecordType>
    <fullName>Insurer_of_Quote</fullName>
    <active>true</active>
    <description>Capture related insurer details involved in quote</description>
    <label>Insurer of Quote</label>
</RecordType>