force-app/main/default/objects/Insurer__c/validationRules/Policy_Insurer.validationRule-meta.xml
<ValidationRule>
    <fullName>Policy_Insurer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName ==&quot;Insurer_of_Quote&quot;, 
Policy__r.RecordType.DeveloperName =&quot;Non_Program_Policy&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Reinstatement of Quote from Policy</errorMessage>
</ValidationRule>