force-app/main/default/objects/Insurer__c/validationRules/Quote_Insurer.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Insurer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Insurer_of_Policy&quot;, Quote__r.RecordType.DeveloperName ==&quot;Non_Program_Quote&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Insurer of Policy from Quote</errorMessage>
</ValidationRule>