force-app/main/default/objects/Insurer__c/validationRules/Total_Percentage_Opportunity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Percentage_Opportunity_Validation</fullName>
    <active>true</active>
    <description>If the Validity Check For Opp field is &quot;checked&quot; give an error.</description>
    <errorConditionFormula>Validity_Check_For_Opp__c</errorConditionFormula>
    <errorMessage>Can not create another Insurer. Total percentage greater than 100.</errorMessage>
</ValidationRule>